cuidar-parnaiba/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: parnaiba
  name: parnaiba
spec:
  replicas: 3
  selector:
    matchLabels:
      io.kompose.service: parnaiba
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  minReadySeconds: 180
  template:
    metadata:
      labels:
        io.kompose.service: parnaiba
    spec:
      containers:
        - name: parnaiba
          image: acrcuidarnew.azurecr.io/saude-publica-prd-web:3089
          command: ["/bin/bash", "-c"]
          args:
            - |
              mkdir -p app/tmp/pids
              mkdir -p app/tmp/sockets
              bundle exec puma -C config/puma/production.rb
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: azurefile
              mountPath: /mnt/compartilhado
          readinessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 240      # Aguarda 5 minutos para dar tempo do app subir
            timeoutSeconds: 10
            periodSeconds: 10
            failureThreshold: 5
          livenessProbe:
            tcpSocket:
              port: 3000
            initialDelaySeconds: 240      # Aguarda 5 minutos antes de considerar que o app deve estar respondendo
            timeoutSeconds: 10
            periodSeconds: 20
            failureThreshold: 5

          resources:
            requests:
              cpu: "2000m"
              memory: "8Gi"
            limits:
              cpu: "3000m"
              memory: "9Gi"
      volumes:
        - name: azurefile
          persistentVolumeClaim:
            claimName: azurefile-pvc
      restartPolicy: Always
